# persona-system

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
src/: command.rs  daemon.rs  daemon_main.rs  error.rs  event.rs  lib.rs  main.rs  niri.rs  niri_focus.rs  niri_focus_actor.rs  supervision.rs  target.rs
tests/: actor_discipline_truth.rs  actor_runtime_truth.rs  daemon.rs  smoke.rs
