[package]
name         = "persona-system"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-system"
description  = "Portable OS and window-manager boundary for Persona."
publish      = false

[lib]
name = "persona_system"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
unused = "warn"
dead_code = "warn"
